force-app/main/SDO_SCOM_PRODUCT_REVIEWS/objects/SDO_SCOM_Customer_Review__c/SDO_SCOM_Customer_Review__c.object-meta.xml
<CustomObject>
    <label>SDO_SCOM_Customer_Review</label>
    <nameField>
        <label>Customer Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDO_SCOM_Customer_Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>