force-app/main/SDO_SCOM_PRODUCT_REVIEWS/objects/SDO_SCOM_Customer_Review__c/fields/Product_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Rating__c</fullName>
    <description>Product Rating added by Customers between 0-5</description>
    <label>Product_Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>