force-app/main/SDO_SCOM_PRODUCT_REVIEWS/objects/SDO_SCOM_Customer_Review__c/fields/Product_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Review_Date__c</fullName>
    <label>Product_Review_Date</label>
    <type>Date</type>
</CustomField>