force-app/main/SDO_SCOM_PRODUCT_REVIEWS/objects/SDO_SCOM_Customer_Review__c/fields/Product_Review_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Review_Title__c</fullName>
    <description>Title of the Review added by Customer</description>
    <label>Product_Review_Title</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>