force-app/main/SDO_SCOM_PRODUCT_REVIEWS/objects/SDO_SCOM_Customer_Review__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SDO_SCOM_Customer_Reviews</relationshipLabel>
    <relationshipName>SDO_SCOM_Customer_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>